attempted alternate createNote function, clicking submit attached new note to DOM but doesn't save to the database, backend does Note.create which should save upon instantiation of a new note object so I'm unsure what the issue is.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     
       <form id="new-note">
-        <label id="form-header" class="signature-text">new note</label>
+        <label id="form-header" >new note</label>
         <br>
         <br>
         <label for="note-title">Title:</label>
